--- a/California Electricity Demand Data/climate_data/README
+++ b/California Electricity Demand Data/climate_data/README
@@ -1,3 +1,4 @@
+Abbreviation Files:
 zoneX... = climate data for climate zone X.
 
 ...max = Average of all the hottest daily temperatures in a year.
@@ -7,3 +8,6 @@ zoneX... = climate data for climate zone X.
 ...ex = Number of days in a year when daily maximum temperature is above a threshold temperature of XXX °F.$
 Note: Threshold temperature used in this tool is location specific. It is defined as the 98th percentile value of historical daily maximum/minimum temperatures
 (from 1961–1990, between April and October) observed at a location.
+
+
+Source: https://cal-adapt.org/tools/local-climate-change-snapshot
